@@ -11,6 +11,7 @@ phoromatic: Fix possible case of local test profile download issues from Phoroma
 phoromatic: Warn when lacking database write access for Phoromatic Server
 phoromatic: Support (opt-in) handling of non-text file log files
 phoromatic: System log viewer improvements
+phodevi: Improve detection of new Intel oneAPI DPC++/C++ Compiler
 
 Phoronix Test Suite 10.4.0
 16 May 2021
